# projedemo

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260721_0001_create_companies_table.py  20260721_0002_add_identity_and_tenancy.py  20260721_0003_add_research_datasources_import_jobs.py  20260722_0004_add_uploaded_files.py  20260722_0005_add_csv_mapping_import_jobs.py  20260723_0006_add_imported_records.py  20260723_0007_add_import_validation_issues.py
backend/app/: main.py
backend/app/api/: exception_handlers.py  router.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/db/: base.py  session.py
backend/app/exceptions/: company.py  csv_import_execution.py  csv_mapping.py  csv_processing.py  organization.py  research.py  storage.py  uploaded_file.py
backend/app/models/: company.py  datasource.py  import_job.py  import_validation_issue.py  imported_record.py  membership.py  organization.py  research.py  uploaded_file.py  user.py
backend/app/repositories/: company.py  datasource.py  import_job.py  import_validation_issue.py  imported_record.py  organization.py  research.py  uploaded_file.py
backend/app/schemas/: company.py  csv_mapping.py  csv_processing.py  datasource.py  health.py  import_job.py  import_validation_issue.py  imported_record.py  membership.py  organization.py  research.py  uploaded_file.py  user.py
backend/app/services/: company.py  csv_file_access.py  csv_import_execution.py  csv_mapping_validation.py  csv_processing.py  datasource.py  import_job.py  import_row_validation.py  import_validation_issue.py  imported_record.py  mapping_preparation.py  organization.py  research.py  uploaded_file.py
backend/app/storage/: local.py  protocol.py
backend/tests/: test_main.py
backend/tests/alembic/: test_company_migration.py  test_csv_mapping_migration.py  test_identifier_lengths.py  test_identity_tenancy_migration.py  test_import_validation_issues_migration.py  test_imported_records_migration.py
backend/tests/api/: test_exception_handlers.py
backend/tests/core/: test_config.py  test_lifespan.py
backend/tests/csv_processing/: test_csv_processing.py  test_csv_processing_api.py
backend/tests/datasource/: test_datasource.py
backend/tests/db/: test_base.py  test_mixins.py  test_session.py
backend/tests/exceptions/: test_company.py
backend/tests/import_execution/: test_csv_import_execution_api.py  test_csv_import_execution_service.py  test_import_row_validation.py
backend/tests/import_job/: test_api.py  test_repository.py  test_schemas.py  test_service.py
backend/tests/import_validation_issue/: test_import_validation_issue_api.py  test_import_validation_issue_service.py
backend/tests/imported_record/: test_imported_record_api.py  test_imported_record_service.py
backend/tests/integration/: conftest.py
backend/tests/mapping_csv/: test_csv_mapping_api.py  test_csv_mapping_schemas.py  test_csv_mapping_service.py
backend/tests/models/: test_company.py  test_identity.py  test_import_validation_issue.py  test_imported_record.py
backend/tests/repositories/: test_company.py  test_import_validation_issue.py  (+2 more)
(+30 files in other folders)
